fixing wrap and padding

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -178,19 +178,23 @@ address{
   .footer-teams{
     width: 100%;
     height: 20%;
+    padding-left: 1.5rem;
+    padding-right: 1rem;
   }
   .teams-list{
     flex-direction: row;
     align-items: flex-start;
+    flex-wrap: wrap;
   }
   .footer-content{
     width: 100%;
+    padding-left: 1.5rem;
   }
   .content-para{
     width: 90%;
   }
   .footer-socials{
-    padding-left: 5rem;
+    padding-left: 1.5rem;
     width: 100%;
   }
   .footer-end{
